# cupoly

./: CMakeLists.txt  README.md  cuPolyConfig.h.in  known-issues.md
cmake/: FindcuPoly.cmake
doc/: cupoly.doxygen.in
include/cuPoly/: settings.h
include/cuPoly/arithmetic/: context.h  coprimes.h  polynomial.h
include/cuPoly/cuda/: cudaengine.h  dgt.h  sampler.h
include/cuPoly/tool/: log.h  version.h
src/arithmetic/: context.cpp  coprimes.cu  generate_coprimes.py  polynomial.cu
src/cuda/: cudaengine.cu  dgt.cu  sampler.cu
src/tool/: log.cu  version.cpp
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt  test_bfv_mode.cu  test_ckks_mode.cu
